# mmo-resourse

./: ProjectHome.md
CLIENT/: stdafx.h
Client/: ClientClear.bat
Client/UI/CEGUILayoutEditor/src/: CELayoutEditor.cpp  CommandAddWindow.cpp  DialogAlignCtrl.cpp  DialogGrid.cpp  EditorCanvas.cpp  EditorView.cpp  FalProgressBarEx.cpp  Makefile.am  Options.cpp  SelectionMover.cpp  pch.cpp
Client/UI/CEGUILayoutEditor/src/bitmaps/: copy.xpm  icon48.xpm  lock.xpm  new.xpm  paste.xpm  unlock.xpm
Documents/: GM工具概要设计.doc  IO方法性能比较.xls  MMOG中异常和解决方案.doc  技术规格书.doc  数据.xls  网络架构下各模块流程.doc  网络模块设计.doc
Headers/: IClient.h  KProtocol.h  KProtocolDef.h
LogClient/: LogClient_BDB.vcproj  LogClient_gs.vcproj  ReadMe.txt
NETS/: MySocket.h  Servers.h  SocketCommands.h  basemessage.h  serverClient.h
PUBLIC/: AccountPublic.vcproj  AccountServerDef.h  AsynchronousExpire.cpp  AsynchronousExpire.h  AutoFightData.cpp  AutoSupplyData.cpp  AutoSupplyData.h  BITIO.cpp  BillingPublic.vcproj  BounsPublic.vcproj  CStrConverter.h  ClientResource.cpp  ConfigParse.cpp  ConfigParse.h  ConvenientQueue.h  Crc32Static.cpp  Crc32Static.h  CreditSystem.cpp  CreditSystem.h  DataBlock.cpp  DataBlockAllocator.cpp  DataBlockSetWriteRead.cpp  DepotDef.h  DeputyOccu.h  DeputyOccuRecord.cpp  DupliRegionSetup.cpp  EntityProperty.cpp  FBusinessSvrCommon.h  FilesInfo.h  FunctionKeyMapSystem.h  GamePublic.vcproj  GateMsgType.h  GatePublic.vcproj  GoodsExEnum.h  GoodsTailorSetup.cpp  GoodsTailorSetup.h  InputBitStream.cpp  InputBitStream.h  LRMDef.cpp  LinkmanGroupSetup.cpp  (+50 more)
Public/: DefPublic.h  DefSTL.h  (+4 more)
(+10328 files in other folders)
